--- a/BlazorBootstrapWASA/wwwroot/index.html
+++ b/BlazorBootstrapWASA/wwwroot/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pl" data-bs-theme="light">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorBootstrapWASA</title>
     <base href="/" />
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+
+    <!-- Bootstrap 5.3 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Bootstrap Icons (opcjonalnie) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
+
+    <!-- Twoje style -->
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+
+    <!-- Wygenerowane style Blazora -->
     <link href="BlazorBootstrapWASA.styles.css" rel="stylesheet" />
 </head>
 
@@ -26,7 +33,14 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
-</body>
 
+    <script src="_framework/blazor.webassembly.js"></script>
+
+    <script>
+        // Function to switch Bootstrap theme
+        window.setBootstrapTheme = function (theme) {
+            document.documentElement.setAttribute('data-bs-theme', theme);
+        };
+    </script>
+</body>
 </html>
