--- a/BlazorBootstrapWASA/wwwroot/index.html
+++ b/BlazorBootstrapWASA/wwwroot/index.html
@@ -1,43 +1,40 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pl" data-bs-theme="light">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlazorBootstrapWASA</title>
     <base href="/" />
 
-    <!-- Bootstrap 5.3 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <title>BlazorBootstrapWASA</title>
 
-    <!-- Bootstrap Icons (opcjonalnie) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" />
+
+    <!-- Opcjonalnie icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+          rel="stylesheet" />
 
     <!-- Twoje style -->
-    <link rel="stylesheet" href="css/app.css" />
+    <link href="css/app.css" rel="stylesheet" />
 
-    <!-- Wygenerowane style Blazora -->
+    <!-- Definicje motywów -->
+    <link href="css/themes.css" rel="stylesheet" />
+
+    <!-- Style wygenerowane przez Blazor -->
     <link href="BlazorBootstrapWASA.styles.css" rel="stylesheet" />
 </head>
-
 <body>
-    <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
-    </div>
-
+    <div id="app">Loading...</div>
     <div id="blazor-error-ui">
         An unhandled error has occurred.
-        <a href="." class="reload">Reload</a>
+        <a href="" class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Function to switch Bootstrap theme
         window.setBootstrapTheme = function (theme) {
             document.documentElement.setAttribute('data-bs-theme', theme);
         };
