--- a/BlazorBootstrapWASA/wwwroot/index.html
+++ b/BlazorBootstrapWASA/wwwroot/index.html
@@ -25,7 +25,13 @@
     <link href="BlazorBootstrapWASA.styles.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <svg class="loading-progress">
+            <circle r="40%" cx="50%" cy="50%" />
+            <circle r="40%" cx="50%" cy="50%" />
+        </svg>
+        <div class="loading-progress-text"></div>
+    </div>
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
