--- a/BlazorBootstrapWASA/wwwroot/index.html
+++ b/BlazorBootstrapWASA/wwwroot/index.html
@@ -23,6 +23,10 @@
 
     <!-- Style wygenerowane przez Blazor -->
     <link href="BlazorBootstrapWASA.styles.css" rel="stylesheet" />
+
+    <!-- Blazor for chart-->
+    <link href="_content/Blazor.Bootstrap/blazor.bootstrap.css" rel="stylesheet" />
+
 </head>
 <body>
     <div id="app">
@@ -40,6 +44,7 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
     <script>
         window.setBootstrapTheme = function (theme) {
             document.documentElement.setAttribute('data-bs-theme', theme);
