--- a/BlazorBootstrapWASA/wwwroot/index.html
+++ b/BlazorBootstrapWASA/wwwroot/index.html
@@ -8,12 +8,10 @@
     <title>BlazorBootstrapWASA</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Opcjonalnie icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-          rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
 
     <!-- Twoje style -->
     <link href="css/app.css" rel="stylesheet" />
@@ -44,11 +42,17 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js"></script>
     <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
     <script>
         window.setBootstrapTheme = function (theme) {
             document.documentElement.setAttribute('data-bs-theme', theme);
         };
+    </script>
+    <script>
+        window.getCssColor = (varName) =>
+            getComputedStyle(document.documentElement).getPropertyValue(varName);
     </script>
 </body>
 </html>
